# bayes-cpp

./: .gitignore  CMakeLists.txt  Doxyfile.in  FindProtocolBuffers.cmake  README.md  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  index.html  mainpage_8h.html  mainpage_8h_source.html
include/: mainpage.h
include/gp/: CovNoise.h  CovSEiso.h  CovSum.h  cov.h  sqdist.h
proto/: .Matrix.proto.swp  Gaussian.proto  Matrix.proto
tests/: harness.cpp  protoHarness.cpp  sandbox.cpp
